[package]
authors = ["Brenden Matthews <brenden@diddyinc.com>", "Nicolas Werner <nicolas.werner@hotmail.de>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Bot for running builds against GitHub with GitLab CI"
edition = "2021"
keywords = ["github", "gitlab", "ci", "restful", "rest-api"]
license = "Unlicense"
name = "labhub"
readme = "README.md"
repository = "https://github.com/brndnmtthws/labhub"
version = "0.2.0"

[dependencies]
futures = "0.3"
git2 = "0.16"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
percent-encoding = "2.1"
regex = "1"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate"] }
ring = "0.13"
axum = { version = "0.6", features = ["headers"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.1"
toml = "0.5"
url = "2.2"
yansi = "0.5"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
http = "0.2.8"
headers = "0.3.8"
env_logger = "0.10"

[dev-dependencies]
mockers = "0.22"
mockers_derive = "0.22"
env_logger = { version = "0.10", default-features = false }
